--- a/squelettes/contenu/article.html
+++ b/squelettes/contenu/article.html
@@ -1,3 +1,5 @@
+<!-- TODO: Lien _blank -->
+<!-- TODO: Page de lien en tableau ? -->
 <BOUCLE_contenu_article(ARTICLES){id_article}>
     <h1><span>#TITRE</span></h1>
 
