On active le javascript des sections, il est utilisé par l'admin/

--- a/squelettes/inclure/head-foundation-4.html
+++ b/squelettes/inclure/head-foundation-4.html
@@ -33,7 +33,7 @@
     }
     
     jQuery(document).ready(function($) {
-        $(document).foundation('tooltips dropdown', {is_hover: true, opened: opened});
+        $(document).foundation('tooltips dropdown section', {is_hover: true, opened: opened});
     });
     </script>
 ]
