Dans un thead on mes des th et pas des td

--- a/plugins/fabrique_auto/ATL/inclure/liste_organisme.html
+++ b/plugins/fabrique_auto/ATL/inclure/liste_organisme.html
@@ -2,11 +2,11 @@
 <table>
     <thead>
         <tr>
-            <td><:ATL:nom:></td>
-            <td><:ATL:adresse:></td>
-            <td><:ATL:localite:></td>
-            <td><:ATL:nb_activite:></td>
-            <td></td>
+            <th><:ATL:nom:></th>
+            <th><:ATL:adresse:></th>
+            <th><:ATL:localite:></th>
+            <th><:ATL:nb_activite:></th>
+            <th></th>
         </tr>
     </thead>
     <tbody>
