On ajoute la saisie d'activité

--- a/plugins/fabrique_auto/ATL/formulaires/editer_activite_atl.html
+++ b/plugins/fabrique_auto/ATL/formulaires/editer_activite_atl.html
@@ -15,6 +15,17 @@
 				label=<:activite:label_descriptif:>,
 				li_class=haut, class=inserer_barre_edition, rows=4})]
 
+            [(#SAISIE{
+                    badje_type_activites, 
+                    badje_type_activites,
+                    obligatoire=oui_non,
+                    label=<:ATL:type_activite:>,
+                    explication=texte,
+                    li_class=class,
+                    datas=[(#ARRAY{})]
+            })]
+            
+
 			[(#SAISIE{textarea, adresse,
 				label=<:activite:label_adresse:>})]
 
