--- a/plugins/fabrique_auto/ATL/formulaires/editer_activite_atl.html
+++ b/plugins/fabrique_auto/ATL/formulaires/editer_activite_atl.html
@@ -17,15 +17,12 @@
 
             [(#SAISIE{
                     badje_type_activites, 
-                    badje_type_activites,
-                    obligatoire=oui_non,
-                    label=<:ATL:type_activite:>,
-                    explication=texte,
-                    li_class=class,
-                    datas=[(#ARRAY{})]
-            })]
+                    type_activite,
+                    obligatoire=oui,
+                    label=<:ATL:type_activites:>, 
+                    multiple=oui,
+                    class=chosen})]
             
-
 			[(#SAISIE{textarea, adresse,
 				label=<:activite:label_adresse:>})]
 
