On place la navigation

--- a/plugins/fabrique_auto/ATL/contenu/page-editer_activite.html
+++ b/plugins/fabrique_auto/ATL/contenu/page-editer_activite.html
@@ -1,1 +1,3 @@
+<a href="#URL_PAGE{admin}" class="button small radius"><:ATL:retour_orga:></a>
+<a href="[(#URL_PAGE{editer_organisme, id_organisme=#ID_ORGANISME#panel2})]" class="button small radius"><:ATL:retour_orga1:></a>
 #FORMULAIRE_EDITER_ACTIVITE_ATL{#ENV{id_activite}}
