--- a/plugins/fabrique_auto/ATL/contenu/page-editer_organisme.html
+++ b/plugins/fabrique_auto/ATL/contenu/page-editer_organisme.html
@@ -1,19 +1,21 @@
-<div class="section-container auto" data-section>
+<a href="#URL_PAGE{admin}" class="button small radius"><:ATL:retour_orga:></a>
+
+<div class="section-container auto" data-section data-options="deep_linking: true">
     [(#REM) Section qui permet de modifier  ]
     <section>
         <p class="title" data-section-title>
             <a href="#panel1"><:ATL:general:></a>
         </p>
-        <div class="content" data-section-content>
-          #FORMULAIRE_EDITER_ORGANISME_ATL{#ENV{id_organisme}}
+        <div class="content" data-section-content data-slug="panel1">
+          #FORMULAIRE_EDITER_ORGANISME_ATL{#ENV{id_organisme}, #URL_PAGE{editer_organisme, id_organisme=#ENV{id_organisme}#panel1}}
         </div>
     </section>
     <section>
         <p class="title" data-section-title>
             <a href="#panel2"><:ATL:activites:></a>
         </p>
-        <div class="content" data-section-content>
-            <a href="#URL_PAGE{editer_activite, id_organisme=#ID_ORGANISME}" class="button small radius">Ajouter une activite</a>
+        <div class="content" data-section-content data-slug="panel2">
+            <a href="#URL_PAGE{editer_activite, id_organisme=#ID_ORGANISME}" class="button small radius"><:ATL:ajouter_activite:></a>
             <B_activite_organisme>
             <table>
                 <thead>
@@ -34,7 +36,9 @@
                             <td>De #AGE_MIN à #AGE_MAX ans</td>
                             <td>
                                 [(#REM) Partie admin ]
-                                [<a href="[(#URL_PAGE{editer_activiter,id_activite=#ID_ACTIVITE})]">(#CHEMIN{images/admin_editer.png}|balise_img{Editer})</a>]
+                                [<a href="[(#URL_PAGE{editer_activite,id_activite=#ID_ACTIVITE&id_organisme=#ID_ORGANISME})]">
+                                    (#CHEMIN{images/admin_editer.png}|balise_img{Editer})
+                                </a>]
                                 [(#CHEMIN{images/admin_supprimer.png}|balise_img{Supprimer})]
                             </td>
                         </tr>
