On mes le bouton déconnexion en alert pour qu'il soit rouge.

--- a/plugins/fabrique_auto/ATL/contenu/page-admin.html
+++ b/plugins/fabrique_auto/ATL/contenu/page-admin.html
@@ -1,7 +1,7 @@
 [(#REM) Cette page est l'admin pour les contributeurs "ATL". Elles peuvent mettre à jour la base de donnée ici. ]
 
 [(#REM) Quelques liens utile ]
-<a href="#URL_LOGOUT" class="button small radius"><:ATL:deconnexion:></a>
+<a href="#URL_LOGOUT" class="button small alert radius"><:ATL:deconnexion:></a>
 <a href="#URL_PAGE{editer_organisme}#panel1" class="button small radius ajax"><:ATL:ajouter_organisme:></a>
 <B_organisme>
 
