On refabrique le plugin Badje avec un statut pour les organismes.

--- a/plugins/fabrique_auto/badje/prive/objets/contenu/organisme.html
+++ b/plugins/fabrique_auto/badje/prive/objets/contenu/organisme.html
@@ -1,4 +1,4 @@
-<BOUCLE_organisme(BADJE_ORGANISMES){id_organisme}>
+<BOUCLE_organisme(BADJE_ORGANISMES){id_organisme}{statut?}>
 
 [<div class="champ contenu_nom_organisme[ (#NOM_ORGANISME*|strlen|?{'',vide})]">
 	<label><:organisme:label_nom_organisme:> : </label>
