--- a/plugins/fabrique_auto/badje/prive/objets/liste/badje_organismes.html
+++ b/plugins/fabrique_auto/badje/prive/objets/liste/badje_organismes.html
@@ -10,14 +10,16 @@
 	<thead>
 		<tr class='first_row'>
 			<th class='picto' scope='col'></th>
+			<th class='statut' scope='col'>[(#TRI{statut,<span title="<:lien_trier_statut|attribut_html:>">#</span>,ajax})]</th> 
 			<th class='nom_organisme' scope='col'>[(#TRI{nom_organisme,<:organisme:label_nom_organisme:>,ajax})]</th>
 			<th class='id' scope='col'>[(#TRI{id_organisme,<:info_numero_abbreviation:>,ajax})]</th>
 		</tr>
 	</thead>
 	<tbody>
-	<BOUCLE_liste_badje_organismes(BADJE_ORGANISMES){id_mot?}{auteurs_liens.id_auteur?}{where?}{recherche?}{tri #ENV{par,num nom_organisme},#GET{defaut_tri}}{par nom_organisme}{pagination #ENV{nb,10}}>
+	<BOUCLE_liste_badje_organismes(BADJE_ORGANISMES){id_mot?}{auteurs_liens.id_auteur?}{where?}{statut?}{recherche?}{tri #ENV{par,num nom_organisme},#GET{defaut_tri}}{par nom_organisme}{pagination #ENV{nb,10}}>
 		<tr class='[(#COMPTEUR_BOUCLE|alterner{row_odd,row_even})]'>
 			<td class='picto'>[(#CHEMIN_IMAGE{organisme-16.png}|balise_img)]</td>
+			<td class='statut'>[(#STATUT|puce_statut{organisme,#ID_ORGANISME})]</td> 
 			<td class='nom_organisme principale'>[(#LOGO_ORGANISME|image_reduire{20,26})]<a href="[(#ID_ORGANISME|generer_url_entite{organisme})]" title="<:info_numero_abbreviation|attribut_html:> #ID_ORGANISME">[(#RANG). ]#NOM_ORGANISME</a></td>
 			<td class='id'>[(#AUTORISER{modifier,organisme,#ID_ORGANISME}|?{
 				<a href="[(#URL_ECRIRE{organisme_edit,id_organisme=#ID_ORGANISME})]">#ID_ORGANISME</a>,
