--- a/plugins/fabrique_auto/badje/saisies/badje_organismes.html
+++ b/plugins/fabrique_auto/badje/saisies/badje_organismes.html
@@ -4,7 +4,7 @@
 <select name="#ENV{nom}[(#ENV{multiple}|?{\[\]})]" id="champ_[(#ENV{nom}|saisie_nom2classe)]"[ class="(#ENV{class})"][(#ENV{multiple}|oui) multiple="multiple" size="#ENV{size,10}"][ disabled="(#ENV{disable})"]>
 	[(#ENV{cacher_option_intro}|ou{#ENV{multiple}}|non)
 		<option value="">[(#ENV{option_intro})]</option>]
-	<BOUCLE_badje_organismes(BADJE_ORGANISMES){par num nom_organisme, nom_organisme}{recherche?}{tout}>
+	<BOUCLE_badje_organismes(BADJE_ORGANISMES){par num nom_organisme, nom_organisme}{statut?}{recherche?}{tout}>
 		[(#ENV{multiple}|oui)
 		<option value="#ID_ORGANISME"[(#ID_ORGANISME|in_array{#ENV{valeur_forcee,#GET{valeur,#ENV{defaut,#ARRAY}}}}|oui) selected="selected"]>#NOM_ORGANISME</option>]
 		[(#ENV{multiple}|non)
