--- a/plugins/fabrique_auto/ATL/contenu/page-admin.html
+++ b/plugins/fabrique_auto/ATL/contenu/page-admin.html
@@ -2,8 +2,10 @@
 
 [(#REM) Quelques liens utile ]
 <a href="#URL_LOGOUT" class="button small alert radius"><:ATL:deconnexion:></a>
-<a href="#URL_PAGE{editer_organisme}#panel1" class="button small radius ajax"><:ATL:ajouter_organisme:></a>
+<a href="#URL_PAGE{editer_organisme}#panel1" class="button small radius"><:ATL:ajouter_organisme:></a>
 <B_organisme>
+
+#FORMULAIRE_EXPORTER_ORGANISME
 
 [(#REM) lister les organismes dans un tableau ]
 <table>
