On ajoute des placeholde, c'est plus joli.

--- a/plugins/fabrique_auto/ATL/formulaires/editer_organisme_atl.html
+++ b/plugins/fabrique_auto/ATL/formulaires/editer_organisme_atl.html
@@ -8,31 +8,40 @@
 		<ul>
 
 			[(#SAISIE{input, nom_organisme, obligatoire=oui,
-				label=<:organisme:label_nom_organisme:>})]
+				label=<:organisme:label_nom_organisme:>,
+                placeholder=<:organisme:label_nom_organisme:>})]
 
-			[(#SAISIE{textarea, adresse,
-				label=<:organisme:label_adresse:>})]
+			[(#SAISIE{input, adresse,
+				label=<:organisme:label_adresse:>,
+                placeholder=<:organisme:label_adresse:>})]
 
 			[(#SAISIE{input, code_postal,
-				label=<:organisme:label_code_postal:>})]
+				label=<:organisme:label_code_postal:>,
+                placeholder=<:organisme:label_code_postal:>})]
 
 			[(#SAISIE{input, localite,
-				label=<:organisme:label_localite:>})]
+				label=<:organisme:label_localite:>,
+                placeholder=<:organisme:label_localite:>})]
 
 			[(#SAISIE{input, telephone,
-				label=<:organisme:label_telephone:>})]
+				label=<:organisme:label_telephone:>,
+                placeholder=<:organisme:label_telephone:>})]
 
 			[(#SAISIE{input, gsm,
-				label=<:organisme:label_gsm:>})]
+				label=<:organisme:label_gsm:>,
+                placeholder=<:organisme:label_gsm:>})]
 
 			[(#SAISIE{input, fax,
-				label=<:organisme:label_fax:>})]
+				label=<:organisme:label_fax:>,
+                placeholder=<:organisme:label_fax:>})]
 
 			[(#SAISIE{input, email,
-				label=<:organisme:label_email:>})]
+				label=<:organisme:label_email:>,
+                placeholder=<:organisme:label_email:>})]
 
 			[(#SAISIE{input, site_internet,
-				label=<:organisme:label_site_internet:>})]
+				label=<:organisme:label_site_internet:>,
+                placeholder=http://})]
 
 			[(#SAISIE{oui_non, one,
 				label=<:organisme:label_one:>})]
