Un input pour saisir l'adresse

--- a/plugins/fabrique_auto/ATL/formulaires/editer_activite_atl.html
+++ b/plugins/fabrique_auto/ATL/formulaires/editer_activite_atl.html
@@ -23,7 +23,7 @@
                     multiple=oui,
                     class=chosen})]
             
-			[(#SAISIE{textarea, adresse,
+			[(#SAISIE{input, adresse,
 				label=<:activite:label_adresse:>})]
 
 			[(#SAISIE{input, commune,
