On place une explication pour les types d'activité.

--- a/plugins/fabrique_auto/ATL/formulaires/editer_activite_atl.html
+++ b/plugins/fabrique_auto/ATL/formulaires/editer_activite_atl.html
@@ -19,6 +19,7 @@
                     badje_type_activites, 
                     type_activite,
                     obligatoire=oui,
+                    explication=<:ATL:explication_type_activite:>,
                     label=<:ATL:type_activites:>, 
                     multiple=oui,
                     class=chosen})]
