On ajoute une protection, seule les 0minirezo et les ALT peuvent administrer le site.

--- a/plugins/fabrique_auto/ATL/contenu/page-admin.html
+++ b/plugins/fabrique_auto/ATL/contenu/page-admin.html
@@ -1,3 +1,5 @@
+<INCLURE{fond=inclure/protect, env}>
+
 [(#REM) Cette page est l'admin pour les contributeurs "ATL". Elles peuvent mettre à jour la base de donnée ici. ]
 
 #ENV{recherche_atl}
