--- a/plugins/fabrique_auto/ATL/contenu/page-editer_activite.html
+++ b/plugins/fabrique_auto/ATL/contenu/page-editer_activite.html
@@ -1,3 +1,5 @@
+<INCLURE{fond=inclure/protect, env}>
+
 <a href="#URL_PAGE{admin}" class="button small radius"><:ATL:retour_orga:></a>
 <a href="[(#URL_PAGE{editer_organisme, id_organisme=#ID_ORGANISME#panel2})]" class="button small radius"><:ATL:retour_orga1:></a>
 
