--- a/plugins/fabrique_auto/ATL/contenu/page-editer_organisme.html
+++ b/plugins/fabrique_auto/ATL/contenu/page-editer_organisme.html
@@ -1,3 +1,5 @@
+<INCLURE{fond=inclure/protect, env}>
+
 <BOUCLE_organisme(BADJE_ORGANISMES){id_organisme}>
     <h1 class="admin">#NOM_ORGANISME</h1>
 </BOUCLE_organisme>
