Personnaliser le formulaire d'édition d'activité.

--- a/plugins/fabrique_auto/ATL/formulaires/editer_activite_atl.html
+++ b/plugins/fabrique_auto/ATL/formulaires/editer_activite_atl.html
@@ -41,6 +41,10 @@
 			[(#SAISIE{input, prix,
 				label=<:activite:label_prix:>,
                 placeholder=<:activite:label_prix:>})]
+            
+            <li>
+                <h3>Facilités</h3>
+            </li>
 
 			[(#SAISIE{oui_non, accueil_handicap,
 				label=<:activite:label_accueil_handicap:>,
@@ -50,7 +54,7 @@
 				label=<:activite:label_accessibilite_handicap:>,
                 placeholder=<:activite:label_accessibilite_handicap:>,
 				explication=<:activite:explication_accessibilite_handicap:>})]
-
+            <li class="clear"></li>
 			[(#SAISIE{checkbox, logement,
 				label=<:activite:label_logement:>,
                 placeholder=<:activite:label_logement:>,
