--- a/squelettes/body.html
+++ b/squelettes/body.html
@@ -78,7 +78,7 @@
             Badje [(#DATE|affdate{Y})]
         </div>
         <div class="liens large-6 columns">
-            <a href="[(#URL_PAGE{backend})]">Site map</a> - <a href="[(#URL_PAGE{contact})]">Contact</a>
+            <a href="[(#URL_PAGE{backend})]">Site map</a> - <a href="[(#URL_PAGE{contact})]">Contact</a> - <a href="#URL_PAGE{admin}" title="Admin page">Admin</a>
         </div>
         
     </div>
