Limiter le polifil htc à IE7

--- a/squelettes/inclure/head.html
+++ b/squelettes/inclure/head.html
@@ -58,10 +58,9 @@
 ]
 <style type="text/css">
 [(#CONFIG{foundation/fichier_htc}|oui)
-    *, *:before, *:after {
+    .lt-ie8 *, .lt-ie8 *:before, .lt-ie8 *:after {
         [behavior: url((#CHEMIN{boxsizing.htc}));]
     }
-    
 ]
 
 [(#REM) Faire en sorte que les iframes soit responsive, pour le filtre iframe_responsive ]
