--- a/squelettes/inclure/agenda.html
+++ b/squelettes/inclure/agenda.html
@@ -1,17 +1,26 @@
 <B_agenda>
 <div class="row">
-<BOUCLE_agenda(BADJE_ACTIVITES) {id_mot = 1} {0,1}>
-    <div class="large-5 columns">
-        [(#LOGO_ACTIVITE|image_passe_partout{112, 200}|image_recadre{112,200,center})]
+    <div class="large-12 columns slideshow-wrapper">
+        <div class="preloader"></div>
+        <ul data-orbit data-options="timer: true; slide_number: false; navigation_arrows: false; timer_speed: 4000;">
+        <BOUCLE_agenda(BADJE_ACTIVITES) {id_mot = 1} {0,4}>
+            <li>
+                [(#LOGO_ACTIVITE
+                    |sinon{#LOGO_SITE_SPIP}
+                    |image_passe_partout{112, 200}
+                    |image_recadre{112,200,center}
+                    |image_aplatir{jpg, #F8F0D1}
+                    |inserer_attribut{class, orbit_logo})]
+                <div class="orbit-caption">
+                    <BOUCLE_organisme_agenda(BADJE_ORGANISMES){id_activite}>
+                        [<h3>(#NOM_ORGANISME)</h3>]
+                        [<p class="pediode">(#PERIODE|afficher_periode)</p>]
+                        [<p class="descriptif">(#DESCRIPTIF|couper{100})</p>]
+                        [<a href="(#SITE_INTERNET|add_http)" title="#NOM_ORGANISME" class="bouton_badge"><:savoir_plus:></a>]
+                    </BOUCLE_organisme_agenda>
+                </div>
+            </li>
+        </BOUCLE_agenda>
     </div>
-    <div class="agenda_texte large-7 columns">
-        <BOUCLE_organisme_agenda(BADJE_ORGANISMES){id_activite}>
-            [<h3>(#NOM_ORGANISME)</h3>]
-            [<p class="pediode">(#PERIODE|afficher_periode)</p>]
-            [<p class="descriptif">(#DESCRIPTIF|couper{100})</p>]
-            [<a href="(#URL_ACTIVITE)" title="#NOM_ORGANISME" class="bouton_badge"><:savoir_plus:></a>]
-        </BOUCLE_organisme_agenda>
-    </div>
-</BOUCLE_agenda>
 </div>
 </B_agenda>
