Target _blank sur le lien.

--- a/squelettes/inclure/agenda.html
+++ b/squelettes/inclure/agenda.html
@@ -16,7 +16,7 @@
                         [<h3>(#NOM_ORGANISME)</h3>]
                         [<p class="pediode">(#PERIODE|afficher_periode)</p>]
                         [<p class="descriptif">(#DESCRIPTIF|couper{100})</p>]
-                        [<a href="(#SITE_INTERNET|add_http)" title="#NOM_ORGANISME" class="bouton_badge"><:savoir_plus:></a>]
+                        [<a href="(#SITE_INTERNET|add_http)" title="#NOM_ORGANISME" class="bouton_badge" target="_blank"><:savoir_plus:></a>]
                     </BOUCLE_organisme_agenda>
                 </div>
             </li>
