Target blank pour les liens dans les textes.

--- a/squelettes/contenu/article.html
+++ b/squelettes/contenu/article.html
@@ -4,7 +4,7 @@
     <h1><span>#TITRE</span></h1>
 
     <div class="texte-principal">
-        [(#TEXTE)]
+        [(#TEXTE|liens_ouvrants)]
         [(#NOTES)]
     </div>
 </BOUCLE_contenu_article>
