On ecrit caddie correctement.

--- a/squelettes/contenu/page-ma-selection.html
+++ b/squelettes/contenu/page-ma-selection.html
@@ -10,6 +10,6 @@
 </BOUCLE_ma_selection>
 
 </B_ma_selection>
-<p>Pas d'élément dans le cadi !</p>
+<p>Pas d'élément dans le caddie !</p>
 <//B_ma_selection>
 </div>
