--- a/squelettes/inclure/head-foundation-4.html
+++ b/squelettes/inclure/head-foundation-4.html
@@ -2,7 +2,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
 [(#REM) On va chercher le CSS de foundation. ]
-[<link rel="stylesheet" href="(#CHEMIN{foundation/foundation-4/css/foundation.min.css}|direction_css)" type="text/css" />]
+[<link rel="stylesheet" href="(#CHEMIN{foundation/foundation-4/css/foundation.css}|direction_css)" type="text/css" />]
 
 [(#REM) On va chercher le CSS de foundation. ]
 [<link rel="stylesheet" href="(#CHEMIN{foundation/ie8-grid-foundation-4.css}|direction_css)" type="text/css" />]
