On place des intitulés devant les numéros/

--- a/squelettes/inclure/cadre_activite.html
+++ b/squelettes/inclure/cadre_activite.html
@@ -7,7 +7,7 @@
             <li class="bold">#CODE_POSTAL #COMMUNE</li>
             
             <BOUCLE_organisme_cadre(BADJE_ORGANISMES){id_activite}>
-            <li class="bold">#TELEPHONE [/ (#GSM)] [/ (#FAX)]</li>
+            <li class="bold">[Tel: (#TELEPHONE)] [/ Gsm: (#GSM)] [/ Fax: (#FAX)]</li>
             </BOUCLE_organisme_cadre>
             
             <li>[(#PERIODE|afficher_periode{' - '})]</li>
