--- a/squelettes/inclure/recherche-sidebar.html
+++ b/squelettes/inclure/recherche-sidebar.html
@@ -25,7 +25,7 @@
                     <ul>
                         <li class="bold">[(#_activite_info:ADRESSE|ucfirst|propre)]</li>
                         <li class="bold">#_activite_info:CODE_POSTAL #_activite_info:COMMUNE</li>
-                        <li class="bold">#TELEPHONE [/ (#GSM)] [/ (#FAX)]</li>
+                        <li class="bold">[Tel: (#TELEPHONE)] [/ Gsm: (#GSM)] [/ Fax: (#FAX)]</li>
                         [<li>(#EMAIL)</li>]
                         [<li class="site_internet">
                             <a href="[(#SITE_INTERNET|add_http)]" title="[(#NOM_ORGANISME|attribut_html)]" target="_blank">
