Page de contact simple

--- a/squelettes/contenu/page-contact.html
+++ b/squelettes/contenu/page-contact.html
@@ -1,2 +1,6 @@
-<h1><span>Contact</span></h1>
-#FORMULAIRE_CONTACT_LIBRE{#EMAIL_WEBMASTER}
+<BOUCLE_contact(ARTICLES){id_article = 14}>
+    <h1><span>#TITRE</span></h1>
+    <div class="texte-principal">
+        #TEXTE
+    </div>
+</BOUCLE_contact>
