Lien dans le 3ème cadre.

--- a/squelettes/inclure/annee_scolaire.html
+++ b/squelettes/inclure/annee_scolaire.html
@@ -1,9 +1,10 @@
 <div class="annee_scolaire">
     <div class="left_illu"></div>
 
-    <div class="go"></div>
-    
-    <div class="texte"></div>
+    <a href="http://bruxellestempslibre.be">
+        <div class="go"></div>
+        <div class="texte"></div>
+    </a>
 
     <div class="right_illu"></div>
 </div>
