Mise à jour de foundation avec les bons composant.

--- a/squelettes/foundation/foundation-4/index.html
+++ b/squelettes/foundation/foundation-4/index.html
@@ -109,6 +109,10 @@
   
   <script src="js/foundation/foundation.dropdown.js"></script>
   
+  <script src="js/foundation/foundation.placeholder.js"></script>
+  
+  <script src="js/foundation/foundation.forms.js"></script>
+  
   <script src="js/foundation/foundation.tooltips.js"></script>
   
   <script src="js/foundation/foundation.orbit.js"></script>
